# installnothingweb

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
docs/: LANDING.md  SCALING.md
docs/plans/: 2025-01-25-landing-page.md
src/: cli.rs  config.rs  installer.rs  main.rs  web_server.rs
src/stages/: mod.rs
web/: acknowledgements.html  index.html  robots.txt  sitemap.xml
web/app/: index.html
web/app/js/: app.js
