[package]
name = "install-nothing"
version = "0.4.0"
edition = "2021"
authors = ["Kerim Buyukakyuz"]
description = "A nostalgic infinite installer simulator"

[dependencies]
crossterm = "0.27"
rand = "0.8"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.32"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Web server dependencies for optional web demo
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util"] }
tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "installer-web"
path = "src/web_server.rs"
